[package]
name = "oskd"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
input = "0.9.1"
key-names = "3.0.0"
libc = "0.2.169"
serde = "1.0.217"
serde_json = "1.0.132"
socketio-server = { path = "./libs/socketio-server" }
tokio = { version = "1.41.1", features = ["full"] }
wayland-client = "0.31.8"
winit = "0.30.9"
